
''Alpha0 released''

* Fixed a problem with infinite lights and BiDir or PhotonGI
* Fixed a bug when using radiance groups with variance clamping and OpenCL
* Fixed camera invisible objects usage with volumes
* Fixed TASK_EMIT of LightStrategyPower
* Fixed a crash when using RTPATHOCL and editing area lights (issue #173)
* Fixed a bug when using radiance groups with variance clamping and OpenCL

''Alpha1 released''

* Fixed a crash when using negative material emission values (issue #177)
* Fixed LXS parsing in pyluxcoretools
* Fixed a problem when mixing transparent and solid materials with Mix (issue #183)
* Fix a bug when using glossy coating with any specular material
* Fixed LXS parsing of point light source position
* Fixed object ID not being saved by FILESAVER engine
* Fixed a major bug in carpaint material (issue #186)
* Fixed spelling mistake in cloth material "wool gabardine" preset
* Fixed Scene::RemoveUnusedMeshes()
* Fixed a bug in Mix material when working with specular materials (issue #187)
* Fixed an overflow problem when using an heterogenous volume on very large segments
* Sun relative size has now a lower bound of 1.0 to avoid numerical precision problems
* Fixed a problem with Scene::ToProperties() after editing a scene
* Fixed a self-shadow problem with area light sources

''Beta1 released''

* Fix ToProperties() of mapspherelight and spherelight
* Fixed a problem with caustic cache size when both PhotonGI caches were
  enabled and automatic stop condition for indirect cache was used
* PhotonGI Metropolis will now focus on caustic cache when indirect is done (and vice versa)
* Fixed the access to an uninitialized variable when using PhotonGI caustic cache alone

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

**Note for Windows users:** you have to install the [Microsoft Visual C++ Redistributable
for Visual Studio 2017](https://aka.ms/vs/15/release/vc_redist.x64.exe).